feature: Change on @Action annotation... SF is now supporting Content-Type header by @Action annotation's definition. @Action(type="application/json") is now supported. The old method of manually setting the Content-Type header with Result.setHeader(Result.CONTENT_TYPE_HEADER, "application/json"); is still supported.